--- a/scss/style.css
+++ b/scss/style.css
@@ -99,14 +99,6 @@ header .scaled-form {
   -webkit-text-fill-color: transparent;
   animation: text-fill var(--animation-duration) linear infinite;
 }
-@keyframes text-fill {
-  0% {
-    background-position: 200% 0;
-  }
-  100% {
-    background-position: 0 0;
-  }
-}
 .hero .hero-content p {
   margin: 1.5rem 0;
   color: #fcfcf9;
@@ -185,7 +177,6 @@ header .scaled-form {
 .hero .tax-rebate-form button {
   background: #0a2a43;
   color: #fff;
-  border: none;
   padding: 0.7rem 2rem;
   border-radius: 25px;
   font-size: 1rem;
@@ -194,6 +185,10 @@ header .scaled-form {
 }
 .hero .tax-rebate-form button:hover {
   background: #4fd1c5;
+  border: 2px solid rgb(255, 252, 252);
+}
+.hero .tax-rebate-form button i {
+  padding-left: 5px;
 }
 
 .services {
@@ -225,6 +220,14 @@ header .scaled-form {
   color: #444;
 }
 
+@keyframes text-fill {
+  0% {
+    background-position: 200% 0;
+  }
+  100% {
+    background-position: 0 0;
+  }
+}
 @keyframes fadeInLeft {
   from {
     opacity: 0;
@@ -268,8 +271,9 @@ header .scaled-form {
 .flip-box {
   background-color: transparent;
   width: 300px;
-  height: 200px;
+  height: 300px;
   perspective: 1000px;
+  overflow: hidden;
 }
 
 .flip-box-inner {
@@ -290,6 +294,10 @@ header .scaled-form {
   width: 100%;
   height: 100%;
   backface-visibility: hidden;
+  top: 0;
+  left: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 .flip-box-front {
@@ -306,7 +314,7 @@ header .scaled-form {
 /* Media Queries  */
 @media (max-width: 768px) {
   header .top-bar {
-    padding: 10px;
+    padding: 10px 15px;
     font-size: 0.7rem;
     flex-direction: column;
     align-items: flex-end;
@@ -349,11 +357,15 @@ header .scaled-form {
   .services {
     flex-direction: column;
     height: auto;
-    padding: 2rem 1rem;
+    padding: 10px 40px;
   }
   .services .service {
     max-width: 100%;
     margin-bottom: 2rem;
     text-align: center;
+  }
+  .flip-box {
+    margin-top: 20px;
+    height: 270px;
   }
 }/*# sourceMappingURL=style.css.map */
