--- a/scss/style.css
+++ b/scss/style.css
@@ -1,6 +1,7 @@
-body {
+html, body {
   font-family: "Inter", Arial, sans-serif;
   background: #f5f6fa;
+  padding: 0;
   margin: 0;
   color: #0a2a43;
   box-sizing: border-box;
