--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,9 +5,10 @@ $gray: #f5f6fa;
 $get-started-color: #F7B1B5;
 $accents: #72c8c5;  
 
-body {
+html,body {
   font-family: 'Inter', Arial, sans-serif;
   background: $gray;
+  padding: 0;
   margin: 0;
   color: $primary;
   box-sizing: border-box;
